--- a/portfolio/src/styles.scss
+++ b/portfolio/src/styles.scss
@@ -1,1 +1,13 @@
 @import 'app/theme';
+
+html {
+  height: 100%;
+
+  padding:0px;
+}
+
+body {
+ @extend .mat-app-background;
+ padding:0px;
+  margin:0;
+}
