--- a/portfolio/src/app/toolbar/toolbar.component.html
+++ b/portfolio/src/app/toolbar/toolbar.component.html
@@ -1,8 +1,9 @@
-<mat-toolbar [class.mat-elevation-z8]="true" color="primary">
-  <span>My Application</span>
+<mat-toolbar color="primary">
+  <img style="height: 100px; width:auto;"   src="assets/img/logo_transparent.png"/>
   <span class="fill-remaining-space"></span>
-  <button mat-flat-button color="primary">About</button>
-  <button mat-flat-button color="primary">Experience</button>
-  <button mat-flat-button color="primary">Work</button>
-  <button mat-flat-button color="primary">Contact</button>
+  <button mat-button color="accent">About</button>
+  <button mat-button color="accent">Experience</button>
+  <button mat-button color="accent">Work</button>
+  <button mat-button color="accent">Contact</button>
+  <button mat-stroked-button color="accent">Resume</button>
 </mat-toolbar>
