--- a/portfolio/src/styles.scss
+++ b/portfolio/src/styles.scss
@@ -1,9 +1,20 @@
 @import 'app/theme';
 
+.mat-toolbar.mat-primary {
+  background: #303030;
+  color: #fff;
+}
+
 html {
   height: 100%;
 
   padding:0px;
+}
+
+@mixin mat-ripple-theme($theme) {
+  .mat-ripple-element {
+    background-color: red;
+  }
 }
 
 body {
