--- a/portfolio/src/app/app.component.html
+++ b/portfolio/src/app/app.component.html
@@ -1,7 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
-  <app-toolbar></app-toolbar>
-
   <div class="container">
+    <app-drawer ></app-drawer>
     <router-outlet></router-outlet>
   </div>
 
