--- a/portfolio/src/app/theme.scss
+++ b/portfolio/src/app/theme.scss
@@ -6,21 +6,21 @@
 // Be sure that you only ever include this mixin once!
 @include mat-core();
 
-$mat-black: (
-  50: #303030,
-  100: #303030,
-  200: #303030,
-  300:#303030,
-  400: #303030,
+$brand-primary: (
+  50: #E6E6E6,
+  100: #C1C1C1,
+  200: #989898,
+  300: #6E6E6E,
+  400: #4F4F4F,
   500: #303030,
-  600: #303030,
-  700: #303030,
-  800: #c62828,
-  900: #b71c1c,
-  A100: #ff8a80,
-  A200: #ff5252,
-  A400: #ff1744,
-  A700: #d50000,
+  600: #2B2B2B,
+  700: #242424,
+  800: #1E1E1E,
+  900: #131313,
+  A100: #EF6C6C,
+  A200: #EA3E3E,
+  A400: #F50000,
+  A700: #DB0000,
   contrast: (
     50: $black-87-opacity,
     100: $black-87-opacity,
@@ -30,20 +30,59 @@ $mat-black: (
     500: white,
     600: white,
     700: white,
-    800: $white-87-opacity,
-    900: $white-87-opacity,
+    800: white,
+    900: white,
     A100: $black-87-opacity,
-    A200: white,
-    A400: white,
+    A200: $black-87-opacity,
+    A400: $black-87-opacity,
     A700: white,
   )
 );
 
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
+$brand-accent: (
+  50: #E3F0F4,
+  100: #B8DAE5,
+  200: #89C2D3,
+  300: #59A9C1,
+  400: #3696B4,
+  500: #1284A7,
+  600: #107C9F,
+  700: #0D7196,
+  800: #0A678C,
+  900: #05547C,
+  A100: #AADFFF,
+  A200: #77CBFF,
+  A400: #44B8FF,
+  A700: #2BAEFF,
+  contrast: (
+    50: $black-87-opacity,
+    100: $black-87-opacity,
+    200: $black-87-opacity,
+    300: $black-87-opacity,
+    400: $black-87-opacity,
+    500: white,
+    600: white,
+    700: white,
+    800: white,
+    900: white,
+    A100: $black-87-opacity,
+    A200: $black-87-opacity,
+    A400: $black-87-opacity,
+    A700: white,
+  )
+);
+
+$custom-typography: mat-typography-config(
+  $font-family: 'Nova, monospace',
+  $headline: mat-typography-level(32px, 48px, 700),
+  $body-1: mat-typography-level(16px, 24px, 500)
+);
+
+// Define the palettes for your theme using the Material Design palettes available in palette.sctss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$candy-app-primary: mat-palette($mat_black);
-$candy-app-accent:  mat-palette($mat-indigo, A200, A100, A400);
+$candy-app-primary: mat-palette($brand-primary);
+$candy-app-accent:  mat-palette($brand-accent, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
 $candy-app-warn:    mat-palette($mat-red);
@@ -55,3 +94,10 @@ $candy-app-theme: mat-dark-theme($candy-app-primary, $candy-app-accent, $candy-a
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
 @include angular-material-theme($candy-app-theme);
+@include mat-core($custom-typography);
+
+:root {
+  --color-primary: #{mat-color($candy-app-primary)};
+  --color-accent: #{mat-color($candy-app-accent)};
+  --color-warn: #{mat-color($candy-app-warn)};
+}
