--- a/portfolio/src/app/toolbar/toolbar.component.scss
+++ b/portfolio/src/app/toolbar/toolbar.component.scss
@@ -2,4 +2,11 @@
     /* This fills the remaining space, by using flexbox.
 -   Every toolbar row uses a flexbox row layout. */
     flex: 1 1 auto;
-  }
+}
+
+.branding {
+  height: 55px;
+  width: 100%;
+}
+
+
