Create about us section and responsive fixes

--- a/portfolio/src/app/drawer/drawer.component.html
+++ b/portfolio/src/app/drawer/drawer.component.html
@@ -1,8 +1,10 @@
 <mat-sidenav-container [hasBackdrop]="true"  class="example-container">
-  <mat-sidenav mode="over" [(opened)]="opened">
+  <mat-sidenav [fixedInViewport]="true" [autoFocus]="false" mode="over" [(opened)]="opened">
     <div class="sidenav-container">
-
-      <app-navigation-buttons></app-navigation-buttons>
+      <img alt="logo" class="logo" src="assets/img/JointLogoNoText.png"/>
+      <div class="button-container">
+        <app-navigation-buttons></app-navigation-buttons>
+      </div>
     </div>
   </mat-sidenav>
 
