--- a/portfolio/src/app/drawer/drawer.component.css
+++ b/portfolio/src/app/drawer/drawer.component.css
@@ -1,5 +1,16 @@
-.sidenav-container {
-  padding: 20px;
+.sidenav-container .logo {
+  display: block;
+  margin: auto;
+  width: 50px;
+  height: 50px;
+  padding-top: 10px;
+}
+.sidenav-container .button-container {
+  margin-top: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0 20px;
 }
 
 .toolbar {
