--- a/portfolio/src/app/drawer/drawer.component.scss
+++ b/portfolio/src/app/drawer/drawer.component.scss
@@ -1,6 +1,23 @@
 .sidenav-container {
-  padding: 20px;
+  .logo {
+    display: block;
+    margin: auto;
+    width: 50px;
+    height: 50px;
+    padding-top: 10px;
+  }
+
+
+  .button-container {
+    margin-top: 25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 20px;
+  }
 }
+
+
 
 .toolbar {
   position: fixed;
