--- a/portfolio/src/app/about/about.component.html
+++ b/portfolio/src/app/about/about.component.html
@@ -21,7 +21,7 @@
   <div class="gill-about" fxLayout.gt-md="row" fxLayout.lt-md="column" fxLayoutAlign="center center">
     <div fxFlex="25%" fxFlexOrder.gt-md="1" fxFlexOrder.lt-md="1" fxLayoutAlign="center center">
       <div class="headshot-container">
-        <img alt="dave-headshot" class="headshot" src="assets/img/DaveHeadshot.png"/>
+        <img alt="gill-headshot" class="headshot" src="assets/img/GillHeadshot.jpg"/>
       </div>
     </div>
     <div fxFlex="75%" fxFlexOrder.gt-md="2" fxFlexOrder.lt-md="2" fxLayoutAlign.gt-md="center">
