--- a/portfolio/src/app/hero/hero.component.html
+++ b/portfolio/src/app/hero/hero.component.html
@@ -1,6 +1,6 @@
 <div class="intro-container">
   <div fxLayout="column">
-    <span class="greeting">Hello,</span>
+    <span id="greeting" class="greeting">Hello,</span>
     <span class="intro">We'd love to solve your problems.</span>
     <span class="description">We are a husband and wife team based out of the Greater Philadelphia area providing full service marketing and software development services.</span>
     <span class="specialities">I (husband) specialize in creating high-quality modern websites. </span>
