--- a/portfolio/src/app/navigation-buttons/navigation-buttons.component.html
+++ b/portfolio/src/app/navigation-buttons/navigation-buttons.component.html
@@ -1,5 +1,5 @@
 <div class="button-container">
-  <button class="toolbar-button" mat-button color="accent">About</button>
+  <button (click)="scrollTo('about')" class="toolbar-button" mat-button color="accent">About</button>
   <button class="toolbar-button" mat-button color="accent">Experience</button>
   <button class="toolbar-button" mat-button color="accent">Work</button>
   <button class="toolbar-button" mat-button color="accent">Contact</button>
