--- a/portfolio/src/app/drawer/drawer.component.html
+++ b/portfolio/src/app/drawer/drawer.component.html
@@ -9,7 +9,7 @@
   </mat-sidenav>
 
   <mat-sidenav-content>
-    <app-toolbar class="toolbar"  (sideNavStateChanged)="toggleDrawer($event)"></app-toolbar>
+    <app-toolbar class="toolbar"></app-toolbar>
     <div class="container">
       <app-cover class="cover"></app-cover>
       <app-main-content class="content"></app-main-content>
