--- a/portfolio/src/app/hero/hero.component.html
+++ b/portfolio/src/app/hero/hero.component.html
@@ -5,6 +5,6 @@
     <span class="description">We are a husband and wife team based out of the Greater Philadelphia area providing full service marketing and software development services.</span>
     <span class="specialities">I (husband) specialize in creating high-quality modern websites. </span>
     <span class="specialities">She (wife) knows how to get your business recognized with digital content strategy and social media.</span>
-    <button class="cta-button" mat-stroked-button color="accent">Let's get to work</button>
+    <button (click)="sendEmail()" class="cta-button" mat-stroked-button color="accent">Let's get to work</button>
   </div>
 </div>
