--- a/portfolio/src/app/toolbar-branding/toolbar-branding.component.html
+++ b/portfolio/src/app/toolbar-branding/toolbar-branding.component.html
@@ -1,11 +1,11 @@
 <div class="branding-container fill-remaining-space" fxShow="true" fxHide.gt-sm="true" >
   <span class="fill-remaining-space"></span>
-  <img alt="text-logo" class="toolbar-text-logo" src="assets/img/TextLogo.png">
+  <a href="javascript:void(0);" (click)="scrollToTop()"><img alt="text-logo" class="toolbar-text-logo" src="assets/img/TextLogo.png"></a>
   <span class="fill-remaining-space"></span>
-  <img alt="logo" class="toolbar-logo" src="assets/img/JointLogoNoText.png"/>
+  <a href="javascript:void(0);" (click)="scrollToTop()"><img alt="logo" class="toolbar-logo" src="assets/img/JointLogoNoText.png"/></a>
 </div>
 <div class="branding-container fill-remaining-space" fxShow.gt-md="true" fxHide.lt-md="true">
-  <img alt="logo" class="toolbar-logo" src="assets/img/JointLogoNoText.png"/>
-  <img alt="text-logo" class="toolbar-text-logo" src="assets/img/TextLogo.png">
+  <a href="javascript:void(0);" (click)="scrollToTop()"><img alt="logo" class="toolbar-logo" src="assets/img/JointLogoNoText.png"/></a>
+  <a href="javascript:void(0);" (click)="scrollToTop()"><img alt="text-logo" class="toolbar-text-logo" src="assets/img/TextLogo.png"></a>
   <span class="fill-remaining-space"></span>
 </div>
