--- a/portfolio/src/app/hero/hero.component.css
+++ b/portfolio/src/app/hero/hero.component.css
@@ -25,7 +25,7 @@
 .intro-container .description, .intro-container .specialities {
   margin-top: 25px;
   font-size: 18px;
-  color: gray;
+  color: lightgray;
   max-width: 35em;
 }
 .intro-container .cta-button {
