--- a/portfolio/src/app/navigation-buttons/navigation-buttons.component.html
+++ b/portfolio/src/app/navigation-buttons/navigation-buttons.component.html
@@ -1,7 +1,5 @@
 <div class="button-container">
   <button (click)="scrollTo('about')" class="toolbar-button" mat-button color="accent">About</button>
-  <button class="toolbar-button" mat-button color="accent">Experience</button>
-  <button class="toolbar-button" mat-button color="accent">Work</button>
-  <button class="toolbar-button" mat-button color="accent">Contact</button>
-  <button class="toolbar-button" mat-raised-button color="accent">Resume</button>
+  <button (click)="scrollTo('portfolio')" class="toolbar-button" mat-button color="accent">Portfolio</button>
+  <button (click)="contactUs()" class="toolbar-button" mat-raised-button color="accent">Contact Us</button>
 </div>
