--- a/portfolio/src/app/theme.scss
+++ b/portfolio/src/app/theme.scss
@@ -1,5 +1,5 @@
 @import '../../node_modules/@angular/material/_theming.scss';
-// Plus imports for other components in your app.
+//// Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
