--- a/portfolio/src/styles.css
+++ b/portfolio/src/styles.css
@@ -1,10 +1,3 @@
-/**
- * Applies styles for users in high contrast mode. Note that this only applies
- * to Microsoft browsers. Chrome can be included by checking for the `html[hc]`
- * attribute, however Chrome handles high contrast differently.
- * @param target Which kind of high contrast setting to target. Defaults to `active`, can be
- *    `white-on-black` or `black-on-white`.
- */
 /* Theme for the ripple elements.*/
 /* stylelint-disable material/no-prefixes */
 /* stylelint-enable */
@@ -723,6 +716,10 @@ textarea.cdk-textarea-autosize-measuring {
 }
 .mat-pseudo-checkbox::after {
   color: #303030;
+}
+
+.mat-pseudo-checkbox-disabled {
+  color: #686868;
 }
 
 .mat-pseudo-checkbox-checked,
@@ -1716,7 +1713,9 @@ th.mat-header-cell, td.mat-cell, td.mat-footer-cell {
 
 .mat-list-option:hover, .mat-list-option:focus,
 .mat-nav-list .mat-list-item:hover,
-.mat-nav-list .mat-list-item:focus {
+.mat-nav-list .mat-list-item:focus,
+.mat-action-list .mat-list-item:hover,
+.mat-action-list .mat-list-item:focus {
   background: rgba(255, 255, 255, 0.04);
 }
 
