--- a/portfolio/src/app/drawer/drawer.component.html
+++ b/portfolio/src/app/drawer/drawer.component.html
@@ -13,6 +13,7 @@
     <div class="container">
       <app-cover class="cover"></app-cover>
       <app-main-content class="content"></app-main-content>
+      <app-contact id="contact-content"></app-contact>
       <app-footer></app-footer>
     </div>
   </mat-sidenav-content>
