--- a/portfolio/src/app/toolbar-branding/toolbar-branding.component.html
+++ b/portfolio/src/app/toolbar-branding/toolbar-branding.component.html
@@ -1,10 +1,10 @@
-<div class="branding-container fill-remaining-space" fxShow="true" fxHide.gt-sm="true" >
+<div class="branding-container" fxShow="true" fxHide.gt-sm="true" >
   <span class="fill-remaining-space"></span>
   <a href="javascript:void(0);" (click)="scrollToTop()"><img alt="text-logo" class="toolbar-text-logo" src="assets/img/TextLogo.png"></a>
   <span class="fill-remaining-space"></span>
   <a href="javascript:void(0);" (click)="scrollToTop()"><img alt="logo" class="toolbar-logo" src="assets/img/JointLogoNoText.png"/></a>
 </div>
-<div class="branding-container fill-remaining-space" fxShow.gt-md="true" fxHide.lt-md="true">
+<div class="branding-container" fxShow.gt-md="true" fxHide.lt-md="true">
   <a href="javascript:void(0);" (click)="scrollToTop()"><img alt="logo" class="toolbar-logo" src="assets/img/JointLogoNoText.png"/></a>
   <a href="javascript:void(0);" (click)="scrollToTop()"><img alt="text-logo" class="toolbar-text-logo" src="assets/img/TextLogo.png"></a>
   <span class="fill-remaining-space"></span>
