Hook up contact button

--- a/portfolio/src/app/contact/contact.component.html
+++ b/portfolio/src/app/contact/contact.component.html
@@ -5,6 +5,6 @@
       We are more than excited to get to work helping you solve your problem!
       Whether you need a new website for your company, help branding your company, or both we are ready to help.
     </p>
-    <button mat-raised-button color="accent">Get In Touch</button>
+    <button mat-raised-button color="accent" (click)="contactUs()">Get In Touch</button>
   </div>
 </div>
