--- a/portfolio/src/app/portfolio/portfolio.component.scss
+++ b/portfolio/src/app/portfolio/portfolio.component.scss
@@ -62,6 +62,14 @@
       font-family: Righteous, cursive;
       color: var(--color-accent);
       font-size: 24px;
+
+      .icon {
+        color: white;
+      }
+
+      .name {
+        margin-left:10px;
+      }
     }
 
     .project-subtitle {
