--- a/portfolio/src/app/main-content/main-content.component.scss
+++ b/portfolio/src/app/main-content/main-content.component.scss
@@ -2,6 +2,7 @@
 
   padding-top: 400px;
   padding-left: 100px;
+  padding-right: 100px;
 
   @media screen and (max-width: 600px) {
     padding-top: 250px;
