--- a/portfolio/src/app/about/about.component.html
+++ b/portfolio/src/app/about/about.component.html
@@ -1,7 +1,7 @@
 <div class="container">
-  <div class="header" fxLayout="row">
-    <h1 class="header-label">Who are we?</h1>
-    <mat-divider></mat-divider>
+  <div class="header" fxLayout="row" fxLayout.lt-sm="column" fxLayoutAlign.lt-sm="center center">
+    <h1 fxFlex="20%" fxFlex.sm="40%" fxFlex.lt-sm="100%" class="header-label">Who are we?</h1>
+    <mat-divider fxFlex="60%" fxFlex.lt-lg="50%" fxFlex.lt-sm="100%"></mat-divider>
   </div>
   <div class="about" fxLayout.gt-md="row" fxLayout.lt-md="column" fxLayoutAlign="center center">
     <div fxFlex="50%" fxLayout="column" fxFlexOrder.gt-md="1" fxFlexOrder.lt-md="2">
