--- a/portfolio/src/app/contact/contact.component.scss
+++ b/portfolio/src/app/contact/contact.component.scss
@@ -5,6 +5,10 @@
       font-size: 36px;
       font-family: Righteous, cursive;
       color: var(--color-accent);
+
+      @media screen and (max-width: 599px) {
+        font-size: 24px;
+      }
     }
     .body {
       font-size: 18px;
@@ -12,6 +16,10 @@
       color: lightgray;
 
       max-width: 50%;
+
+      @media screen and (max-width: 599px) {
+        max-width: 75%;
+      }
     }
 
     button {
