--- a/portfolio/src/app/main-content/main-content.component.css
+++ b/portfolio/src/app/main-content/main-content.component.css
@@ -1,6 +1,7 @@
 .container {
   padding-top: 400px;
   padding-left: 100px;
+  padding-right: 100px;
 }
 @media screen and (max-width: 600px) {
   .container {
