--- a/portfolio/src/app/portfolio/portfolio.component.css
+++ b/portfolio/src/app/portfolio/portfolio.component.css
@@ -16,64 +16,72 @@
   font-size: 36px;
   font-family: "Righteous", cursive;
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 959px) {
   .container .header .header-label {
     font-size: 24px;
-  }
-}
-@media only screen and (max-width: 374px) {
-  .container .header .header-label {
-    font-size: 18px;
   }
 }
 .container .header mat-divider {
   border-top-color: white;
   width: 50%;
   margin-top: 50px;
-  margin-left: 10px;
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 599px) {
   .container .header mat-divider {
-    margin-top: 32px;
+    margin-top: 15px;
+    margin-bottom: 15px;
   }
 }
-@media only screen and (max-width: 374px) {
+@media only screen and (min-width: 600px) and (max-width: 959px) {
   .container .header mat-divider {
-    margin-top: 25px;
+    margin-top: 30px;
   }
 }
 
-.project-list .project-card {
+.project-container {
+  margin-right: 75px;
+}
+@media only screen and (max-width: 599px) {
+  .project-container {
+    padding: 10px;
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+}
+.project-container .project-list .project-card {
   border-radius: 10px;
   background-color: #4F4F4F;
-  margin-left: 10px;
   margin-top: 20px;
-  max-width: 300px;
   transition: box-shadow 280ms cubic-bezier(0.4, 0, 0.2, 1);
   box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
 }
-.project-list .project-card:hover {
-  box-shadow: 0px 3px 5px -1px var(--color-accent), 0px 6px 10px 0px var(--color-accent), 0px 1px 18px 0px var(--color-accent);
+.project-container .project-list .project-card:hover {
+  box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
-.project-list .project-card .project-title {
+.project-container .project-list .project-card .project-title {
   font-family: Righteous, cursive;
   color: var(--color-accent);
-  font-size: 24px;
+  font-size: 18px;
 }
-.project-list .project-card .project-title .icon {
+.project-container .project-list .project-card .project-title .icon {
   color: white;
+  margin-left: 3px;
 }
-.project-list .project-card .project-title .name {
+.project-container .project-list .project-card .project-title .name {
   margin-left: 10px;
 }
-.project-list .project-card .project-subtitle {
+.project-container .project-list .project-card .project-subtitle {
   margin-top: 5px;
+  margin-left: 3px;
   font-family: Nova, monospace;
 }
-.project-list .project-card .project-description {
+.project-container .project-list .project-card .project-subtitle mat-divider {
+  margin-top: 10px;
+}
+.project-container .project-list .project-card .project-content .project-description {
   font-family: Nova, monospace;
 }
-.project-list .project-card .project-action {
+.project-container .project-list .project-card .project-action {
   justify-content: end;
 }
 
